--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="manifest" href="homepage/manifest.json" />
+    <link rel="manifest" href="/homepage/manifest.json" />
 
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -15,19 +15,19 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="icon" type="image/png" sizes="192x192" href="homepage/icons/icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/homepage/icons/icon-192x192.png" />
     <link
       rel="apple-touch-icon"
       type="image/png"
       sizes="192x192"
-      href="homepage/icons/icon-192x192.png"
+      href="/homepage/icons/icon-192x192.png"
     />
-    <link rel="icon" type="image/png" sizes="512x512" href="homepage/icons/icon-512x512.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/homepage/icons/icon-512x512.png" />
     <link
       rel="apple-touch-icon"
       type="image/png"
       sizes="512x512"
-      href="homepage/icons/icon-512x512.png"
+      href="/homepage/icons/icon-512x512.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
